# CNU

DL26/hw04/prompt1_timeseries_transformer/: README.md  pyproject.toml
DL26/hw04/prompt1_timeseries_transformer/src/ts_transformer/: __init__.py  data.py  model.py  train.py
DL26/hw04/prompt1_timeseries_transformer/tests/: test_smoke.py
UPL25/hw10/: dune  hw10.ml  hw10_test.ml
UPL25/hw10/_coverage/: hw10.ml.html  index.html
UPL25/hw11/: dune  hw11.ml  hw11_test.ml  store.ml
UPL25/hw11/_build/: .db  .digest-db  log
UPL25/hw11/_build/default/: ast.cmxa  hw11.cmxa  hw11.ml  hw11_test.cmxa  hw11_test.ml  hw11_test.pp.ml  parserMain.cmxa  store.cmxa  store.ml
UPL25/hw11/_build/default/.ast.objs/byte/: ast.cmi  ast.cmo  ast.cmt
UPL25/hw11/_build/default/.ast.objs/native/: ast.cmx
UPL25/hw11/_build/default/.dune/: configurator  configurator.v2
UPL25/hw11/_build/default/.hw11.objs/byte/: hw11.cmi  hw11.cmo  hw11.cmt
UPL25/hw11/_build/default/.hw11.objs/native/: hw11.cmx
UPL25/hw11/_build/default/.hw11_test.inline-tests/: partitions-best
UPL25/hw11/_build/default/.hw11_test.objs/byte/: hw11_test.cmi  hw11_test.cmo  hw11_test.cmt
UPL25/hw11/_build/default/.hw11_test.objs/native/: hw11_test.cmx
UPL25/hw11/_build/default/.merlin-conf/: lib-ast  lib-hw11  lib-hw11_test  lib-parserMain  lib-store
UPL25/hw11/_build/default/.parserMain.objs/byte/: parserMain.cmi  parserMain.cmo  parserMain.cmt  parserMain__.cmi  parserMain__.cmo  parserMain__.cmt  parserMain__Lexer.cmi  parserMain__Lexer.cmo  parserMain__Lexer.cmt  parserMain__Parser.cmi  parserMain__Parser.cmti
UPL25/hw11/_build/default/.parserMain.objs/native/: parserMain.cmx  (+3 more)
UPL25/hw11/_build/default/parser/: ast.ml  lexer.ml  lexer.mll  parser.ml  parser.mli  parser.mly  parserMain.ml  parser__mock.ml.mock  parser__mock.mli.inferred
UPL25/hw11/_coverage/: hw11.ml.html  index.html
UPL25/hw12/: a.ml  dune  hw12.ml
UPL25/hw12/_build/: .db  .digest-db  log
UPL25/hw12/_build/default/: ast.cmxa  env.cmxa  env.ml  fstore.ml  hw12_test.pp.ml  mem.ml  parserMain.cmxa  store.cmxa  value.cmxa  value.ml
UPL25/hw12/_build/default/.merlin-conf/: lib-ast  lib-env  lib-fstore  lib-hw12  lib-hw12_test  lib-mem  lib-parserMain  lib-store  lib-value
UPL25/hw12/_build/default/.parserMain.objs/: parserMain.impl.d  parserMain__Lexer.impl.d  parserMain__Parser.impl.d  parserMain__Parser.intf.d  parser__mock.impl.d
(+527 files in other folders)
