(include_subdirs unqualified)

(library
  (name hw10)
  (modules hw10) 
  (libraries ast store parserMain)
  (instrumentation (backend bisect_ppx))
)

(library
  (name store)
  (modules store)
  (libraries ast)
)

(library
  (name ast)
  (modules ast)
)

(library
  (name parserMain)
  (modules parserMain parser lexer)
  (libraries ast)
)

(library
  (name hw10_test)
  (inline_tests)
  (modules hw10_test)
  (libraries hw10)
  (preprocess (pps ppx_inline_test))
)
