(include_subdirs unqualified)

(library
  (name hw11)
  (modules hw11) 
  (libraries ast store parserMain)
  (instrumentation (backend bisect_ppx))
)

(library
  (name store)
  (modules store)
  (libraries ast)
)

(library
  (name ast)
  (modules ast)
)

(library
  (name parserMain)
  (modules parserMain parser lexer)
  (libraries ast)
)

(library
  (name hw11_test)
  (inline_tests)
  (modules hw11_test)
  (libraries hw11)
  (preprocess (pps ppx_inline_test))
)
