[project]
name = "prompt1-timeseries-transformer"
version = "0.1.0"
description = "A compact Transformer model for multivariate time-series forecasting."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "torch>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
train-ts-transformer = "ts_transformer.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_transformer"]
